--- a/blog.html
+++ b/blog.html
@@ -40,10 +40,11 @@
         data-aos-easing="ease-in-back"
         data-aos-duration="1600"
         data-aos-delay="0"><div class="text"></div></h1>
-        <button><i class="arrow down"></i></button>
+        <a href="#section2"><button><i class="arrow down"></i></button></a>
       </div>
-
+    <div id="section2"></div>
     <div class = "page">
+      
         <div class = "page2" data-aos="fade-zoom-in"
               data-aos-easing="ease-in-back"
               data-aos-duration="800"
