--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
               </div>
                 <div class="float">
                   <h2 class= "line-1 anim-typewriter">Hi, we're <a>Sudo Sierra</a></h2>
-                  <h4 class= "line-2 anim-typewriter1">And we are more than just a <a>CTF group</a>.</h4>
-                  <button class = "fade-in">FIND OUT MORE ➟</button>
+                  <h4 class= "line-2 anim-typewriter1">And we are a <a>CTF team</a> from Australia.</h4>
+                  <button class = "fade-in"><a href="#section2">FIND OUT MORE ➟</a></button>
                 </div>
                 <div class="float1">
                   <img class = "right" src="arrows.gif"/>
                 </div>
               
             <div class = "page">
+              <div id="section2"></div>
               <!--
               <hr/>
                 <p>Recent CTF: 14th in <a>Digital Overdose Conference CTF</a></p>
