--- a/team.html
+++ b/team.html
@@ -38,13 +38,15 @@
       data-aos-easing="ease-in-back"
       data-aos-duration="1600"
       data-aos-delay="0"><div class="text"></div></h1>
-      <button><i class="arrow down"></i></button>
+      <a href="#section2"><button><i class="arrow down"></i></button></a>
     </div>
-
+  
+    <div id="section2"></div>  
   <div class = "page2" data-aos="fade-zoom-in"
   data-aos-easing="ease-in-back"
   data-aos-duration="500"
   data-aos-delay="0">
+  
     <!--<h2>Our members</h2>-->
     <div class="float">
       <div class="innerfloat">
@@ -54,7 +56,7 @@
         <h1>Maggotty</h1>
       </div>
 
-      <p class = "right">Experienced in cryptography, but main OSINT and scripting.
+      <p class = "right">Experienced in cryptography, but Specialises in OSINT and scripting.
       </p>
     </div>
     <div class="float1">
@@ -64,7 +66,7 @@
       <div class = "innerfloat1">
         <h1>GordonTown</h1>
       </div>
-      <p class = "right">Main crypto. Experienced in OSINT, and machine learning.</p>
+      <p class = "right">Specialises in crypto and machine learning.</p>
     </div>
     <div class="float" margin-top="20px;">
       <div class="innerfloat">
@@ -82,7 +84,7 @@
       <div class = "innerfloat1">
         <h1>NewGuyInTown</h1>
       </div>
-      <p class = "right">Reverse engineering main, experienced in pwn.</p>
+      <p class = "right">Reverse engineering main, and experienced in pwn.</p>
     </div>
   </div>
 
