--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="float">
                   <h2 class= "line-1 anim-typewriter">Hi, we're <a>Sudo Sierra</a></h2>
                   <h4 class= "line-2 anim-typewriter1">And we are a <a>CTF team</a> from Australia.</h4>
-                  <button class = "fade-in"><a href="#section2">FIND OUT MORE ➟</a></button>
+                  <button class = "fade-in"><a href="#section2" id = "white">FIND OUT MORE ➟</a></button>
                 </div>
                 <div class="float1">
                   <img class = "right" src="arrows.gif"/>
