--- a/team.html
+++ b/team.html
@@ -56,7 +56,7 @@
         <h1>Maggotty</h1>
       </div>
 
-      <p class = "right">Experienced in cryptography, but Specialises in OSINT and scripting.
+      <p class = "right">Experienced in cryptography, but specialises in OSINT and scripting.
       </p>
     </div>
     <div class="float1">
