--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
       <div class = "innerfloat1">
         <h1>GordonTown</h1>
       </div>
-      <p class = "right">Specialises in crypto and machine learning.</p>
+      <p class = "right">Crypto main. Also specialises in machine learning.</p>
     </div>
     <div class="float" margin-top="20px;">
       <div class="innerfloat">
