--- a/blog.html
+++ b/blog.html
@@ -80,70 +80,100 @@
                     and not due to the organisers - the top few teams were colluding and upon their ban, they released the flags
                      to everyone in the discord...&nbsp;&nbsp;&nbsp;<a href = "blog.html">Read More →</a></h5>
                 </div>
-                <div class="grid-item">
+                <div class="grid-item" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-duration="800"
+                data-aos-delay="0">
                   <h3>How we finished 2nd globally in AWS DeepRacer</h3>
                   <p>Topics: Artificial Intelligence</p>
                   <h5>As demonstrated by the name, this CTF was easy. But that wasn't the only thing, it was also guessy. Further - 
                     and not due to the organisers - the top few teams were colluding and upon their ban, they released the flags
                      to everyone in the discord...&nbsp;&nbsp;&nbsp;<a href = "blog.html">Read More →</a></h5>
                     </div>
-                <div class="grid-item">
+                <div class="grid-item" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-duration="800"
+                data-aos-delay="0">
                   <h3>Miscellaneous</h3>
                   <p>Topics: Cybersecurity</p>
                   <h5>As demonstrated by the name, this CTF was easy. But that wasn't the only thing, it was also guessy. Further - 
                     and not due to the organisers - the top few teams were colluding and upon their ban, they released the flags
                      to everyone in the discord...&nbsp;&nbsp;&nbsp;<a href = "blog.html">Read More →</a></h5>
                 </div>
-                <div class="grid-item">
+                <div class="grid-item" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-duration="800"
+                data-aos-delay="0">
                   <h3>How we finished 2nd globally in AWS DeepRacer</h3>
                   <p>Topics: Artificial Intelligence</p>
                   <h5>As demonstrated by the name, this CTF was easy. But that wasn't the only thing, it was also guessy. Further - 
                     and not due to the organisers - the top few teams were colluding and upon their ban, they released the flags
                      to everyone in the discord...&nbsp;&nbsp;&nbsp;<a href = "blog.html">Read More →</a></h5>
                     </div>
-                <div class="grid-item">
+                <div class="grid-item" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-duration="800"
+                data-aos-delay="0">
                   <h3>Miscellaneous</h3>
                   <p>Topics: Cybersecurity</p>
                   <h5>As demonstrated by the name, this CTF was easy. But that wasn't the only thing, it was also guessy. Further - 
                     and not due to the organisers - the top few teams were colluding and upon their ban, they released the flags
                      to everyone in the discord...&nbsp;&nbsp;&nbsp;<a href = "blog.html">Read More →</a></h5>
                 </div>
-                <div class="grid-item">
+                <div class="grid-item" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-duration="800"
+                data-aos-delay="0">
                   <h3>How we finished 2nd globally in AWS DeepRacer</h3>
                   <p>Topics: Artificial Intelligence</p>
                   <h5>As demonstrated by the name, this CTF was easy. But that wasn't the only thing, it was also guessy. Further - 
                     and not due to the organisers - the top few teams were colluding and upon their ban, they released the flags
                      to everyone in the discord...&nbsp;&nbsp;&nbsp;<a href = "blog.html">Read More →</a></h5>
                     </div>
-                <div class="grid-item">
+                <div class="grid-item" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-duration="800"
+                data-aos-delay="0">
                   <h3>Miscellaneous</h3>
                   <p>Topics: Cybersecurity</p>
                   <h5>As demonstrated by the name, this CTF was easy. But that wasn't the only thing, it was also guessy. Further - 
                     and not due to the organisers - the top few teams were colluding and upon their ban, they released the flags
                      to everyone in the discord...&nbsp;&nbsp;&nbsp;<a href = "blog.html">Read More →</a></h5>
                 </div>
-                <div class="grid-item">
+                <div class="grid-item" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-duration="800"
+                data-aos-delay="0">
                   <h3>How we finished 2nd globally in AWS DeepRacer</h3>
                   <p>Topics: Artificial Intelligence</p>
                   <h5>As demonstrated by the name, this CTF was easy. But that wasn't the only thing, it was also guessy. Further - 
                     and not due to the organisers - the top few teams were colluding and upon their ban, they released the flags
                      to everyone in the discord...&nbsp;&nbsp;&nbsp;<a href = "blog.html">Read More →</a></h5>
                     </div>
-                <div class="grid-item">
+                <div class="grid-item" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-duration="800"
+                data-aos-delay="0">
                   <h3>Miscellaneous</h3>
                   <p>Topics: Cybersecurity</p>
                   <h5>As demonstrated by the name, this CTF was easy. But that wasn't the only thing, it was also guessy. Further - 
                     and not due to the organisers - the top few teams were colluding and upon their ban, they released the flags
                      to everyone in the discord...&nbsp;&nbsp;&nbsp;<a href = "blog.html">Read More →</a></h5>
                 </div>
-                <div class="grid-item">
+                <div class="grid-item" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-duration="800"
+                data-aos-delay="0">
                   <h3>How we finished 2nd globally in AWS DeepRacer</h3>
                   <p>Topics: Artificial Intelligence</p>
                   <h5>As demonstrated by the name, this CTF was easy. But that wasn't the only thing, it was also guessy. Further - 
                     and not due to the organisers - the top few teams were colluding and upon their ban, they released the flags
                      to everyone in the discord...&nbsp;&nbsp;&nbsp;<a href = "blog.html">Read More →</a></h5>
                     </div>
-                <div class="grid-item">
+                <div class="grid-item" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-duration="800"
+                data-aos-delay="0">
                   <h3>Miscellaneous</h3>
                   <p>Topics: Cybersecurity</p>
                   <h5>As demonstrated by the name, this CTF was easy. But that wasn't the only thing, it was also guessy. Further - 
@@ -154,11 +184,10 @@
               </div>
     </div>
       
-  <div class = "footer">
-    <hr class = "footerRule"/>
-    <p class = "footerText">Interested in joining? We'd like to hear from you! Shoot us an email at x@sudosierra.com.</p>
-    <p class = "footerText">Sudo Sierra is a non-commercial, ethical hacking team and unaffiliated with any organisations. </p>
-  </div>
+    <div class = "footer">
+      <p class = "footerText">© 2023 Slash. Website developed by Maggotty.</p>
+      <p class = "footerText">Slash is a non-commercial, ethical hacking team and not affiliated with any organisations. </p>
+    </div>
 
 
   <script>
