--- a/team.html
+++ b/team.html
@@ -18,7 +18,10 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&family=Roboto+Flex:opsz,wght@8..144,200&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@300&family=Rubik:ital,wght@1,300&display=swap" rel="stylesheet">          </head>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@300&family=Rubik:ital,wght@1,300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Gantari:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+</head>
 
   
   <div id="globalNav">
@@ -55,9 +58,14 @@
       <div class = "innerfloat1">
         <h1>Maggotty</h1>
       </div>
-
-      <p class = "right">Experienced in cryptography, but specialises in OSINT and scripting.
+      <p class = "right">
+        CTF: Cryptography, Programming and OSINT 
+        <!--
+        <br/>
+        <br/>
+        Enjoys doing maths, tried competitive programming and attempted (failed) to make IMO and IOI. Likes playing basketball with friends and competitive chess.-->
       </p>
+
     </div>
     <div class="float1">
       <div class="innerfloat">
@@ -66,7 +74,13 @@
       <div class = "innerfloat1">
         <h1>GordonTown</h1>
       </div>
-      <p class = "right">Crypto main. Also specialises in machine learning.</p>
+      <p class = "right">
+        CTF: AI
+        <!--
+        <br/>
+        <br/>
+        I like to eat. I like to eat.I like to eat.I like to eat.I like to eat.I like to eat.I like to eat.I like to eat.I like to eat.I like to eat.I like to eat.I like to eat.-->
+      </p>
     </div>
     <div class="float" margin-top="20px;">
       <div class="innerfloat">
@@ -75,7 +89,9 @@
       <div class = "innerfloat1">
         <h1>9Mile</h1>
       </div>
-      <p class = "right">Steganography, forensics and miscellaneous main.</p>
+      <p class = "right">
+        CTF: Steganography, Forensics and Networking
+      </p>
     </div>
     <div class="float1" margin-top="20px;">
       <div class="innerfloat">
@@ -84,14 +100,15 @@
       <div class = "innerfloat1">
         <h1>NewGuyInTown</h1>
       </div>
-      <p class = "right">Reverse engineering main, and experienced in pwn.</p>
+      <p class = "right">
+        CTF: Reverse Engineering and Pwn
+      </p>
     </div>
   </div>
 
   <div class = "footer">
-    <hr class = "footerRule"/>
-    <p class = "footerText">Interested in joining? We'd like to hear from you! Shoot us an email at x@sudosierra.com.</p>
-    <p class = "footerText">Sudo Sierra is a non-commercial, ethical hacking team and unaffiliated with any organisations. </p>
+    <p class = "footerText">© 2023 Slash. Website developed by Maggotty.</p>
+    <p class = "footerText">Slash is a non-commercial, ethical hacking team and not affiliated with any organisations. </p>
   </div>
 
   <script>
