--- a/index.html
+++ b/index.html
@@ -132,9 +132,8 @@
             </div>
 
             <div class = "footer">
-              <hr class = "footerRule"/>
-              <p class = "footerText">Interested in joining? We'd like to hear from you! Shoot us an email at x@sudosierra.com.</p>
-              <p class = "footerText">Slash is a non-commercial, ethical hacking team and unaffiliated with any organisations. </p>
+              <p class = "footerText">© 2023 Slash. Website developed by Maggotty.</p>
+              <p class = "footerText">Slash is a non-commercial, ethical hacking team and not affiliated with any organisations. </p>
             </div>
 
 
